Added ability to run pages